# ultimate-tauri-template

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.cargo/: config.toml
.github/workflows/: ci.yml  commitlint.yml
apps/desktop/: .gitignore  components.json  nuxt.config.ts  package.json
apps/desktop/layouts/: default.vue
apps/desktop/lib/commands/: discovery.ts  server.ts
apps/desktop/pages/: debug.vue  index.vue
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: constants.rs  main.rs
apps/desktop/src-tauri/src/commands/: discovery.rs  mod.rs  server.rs
apps/desktop/src-tauri/src/server/: discovery.rs  main.rs  mod.rs  model.rs  rest.rs  utils.rs
apps/desktop/src-tauri/src/setup/: mod.rs  peer_discovery.rs
apps/desktop/src-tauri/src/utils/: log.rs
