[workspace]
resolver = "2"

members = [
    "apps/desktop/src-tauri",
    "packages/server",
]

[workspace.dependencies]
axum = { version = "0.6.20" }
axum-extra = { version = "0.8.0" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1"
tonic = "0.11"
hyper = "0.14"
