[workspace]
resolver = "2"

members = ["apps/desktop/src-tauri", "packages/network"]

[workspace.dependencies]
axum = { version = "0.6.20" }
axum-extra = { version = "0.8.0" }
axum-server = { version = "0.5", features = ["tls-rustls"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1"
tonic = "0.11"
tonic-reflection = "0.11.0"
hyper = "0.14"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
