[package]
name = "desktop"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
server = { path = "../../../packages/server" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
serde_json = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
tonic = { workspace = true }
hyper = { workspace = true }
