[package]
name = "desktop"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# name = "desktop_lib"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
network = { path = "../../../packages/network" }
axum-server = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
tonic = { workspace = true }
tonic-reflection = { workspace = true }
hyper = { workspace = true }
log = "0.4"
tauri-plugin-log = { version = "2.0.0-beta", features = ["colored"] }
tauri-plugin-network = "2.0.3-beta.0"
chrono = "0.4.38"
lazy_static = "1.5.0"
anyhow = "1.0.86"
mdns-sd = "0.11.1"
